--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+appdirs==1.4.3
+attrs==18.1.0
+black==18.6b4
 certifi==2018.4.16
 chardet==3.0.4
+click==6.7
+dj-database-url==0.5.0
 Django==2.0.5
+django-heroku==0.3.1
 djangorestframework==3.8.2
 idna==2.7
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 pytz==2018.5
 requests==2.19.1
+toml==0.9.4
 urllib3==1.23
+whitenoise==4.0
